--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <div class="First-Div">
             <img class="ImageLogo" src="img/qp64e8zf.png" alt="Image Logo">
             <h1 class="h1-one">Red Dead Redemption</h1>
-            <ul>
-                <li class="First-Ul"></li>
-                <li class="First-Ul"></li>
-                <li class="First-Ul"></li>
-                <li class="First-Ul"></li>
+            <ul class="store-list">
+                <li class="store-item"></li>
+                <li class="store-item"></li>
+                <li class="store-item"></li>
+                <li class="store-item"></li>
             </ul>
         </div>
     </div>
