--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="">
         <div class="First-Div">
-            <img class="ImageLogo" src="img/qp64e8zf.png" alt="Image Logo">
+            <img class="ImageLogo" src="img/qp64e8zf.png" alt="Image Logo" />
             <h1 class="h1-one">Red Dead Redemption</h1>
             <ul class="store-list">
                 <li class="store-item"></li>
