--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="">
         <div class="First-Div">
             <img class="ImageLogo" src="img/qp64e8zf.png" alt="Image Logo" />
-            <h1 class="h1-one">Red Dead Redemption</h1>
+            <h1 class="game-title">Red Dead Redemption</h1>
             <ul class="store-list">
                 <li class="store-item"></li>
                 <li class="store-item"></li>
