--- a/index.html
+++ b/index.html
@@ -4,22 +4,20 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Red Dead Redemption</title>
     <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
-    <div class="">
-        <div class="First-Div">
-            <img class="ImageLogo" src="img/qp64e8zf.png" alt="Image Logo" />
-            <h1 class="game-title">Red Dead Redemption</h1>
-            <ul class="store-list">
-                <li class="store-item"></li>
-                <li class="store-item"></li>
-                <li class="store-item"></li>
-                <li class="store-item"></li>
-            </ul>
-        </div>
+    <div class="First-Div">
+        <img class="ImageLogo" src="img/qp64e8zf.png" alt="Image Logo" />
+        <h1 class="game-title">Red Dead Redemption</h1>
+        <ul class="store-list">
+            <li class="store-item">Contact</li>
+            <li class="store-item">About</li>
+            <li class="store-item">Details</li>
+            <li class="store-item">Info</li>
+        </ul>
     </div>
 </body>
 
