Files Modified change first div

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="First-Div">
+    <div class="header-section">
         <img class="ImageLogo" src="img/qp64e8zf.png" alt="Image Logo" />
         <h1 class="game-title">Red Dead Redemption</h1>
         <ul class="store-list">
