--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <img class="ImageLogo" src="img/qp64e8zf.png" alt="Image Logo" />
         <h1 class="game-title">Red Dead Redemption</h1>
         <ul class="store-list">
-            <li class="store-item">Contact</li>
-            <li class="store-item">About</li>
-            <li class="store-item">Details</li>
-            <li class="store-item">Info</li>
+            <li class="store-item">Home</li>
+            <li class="store-item">Shop</li>
+            <li class="store-item">Blog</li>
+            <li class="store-item">Support</li>
         </ul>
     </div>
 </body>
