--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="header-section">
-        <img class="ImageLogo" src="img/qp64e8zf.png" alt="Image Logo" />
+        <img class="game-logo" src="img/qp64e8zf.png" alt="Image Logo" />
         <h1 class="game-title">Red Dead Redemption</h1>
         <ul class="store-list">
             <li class="store-item">Home</li>
