New Files Again

--- a/index.html
+++ b/index.html
@@ -4,21 +4,101 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Red Dead Redemption</title>
+    <title>Red Dead Redemption Characters</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="Header-Section.css" />
 </head>
 
 <body>
+    <!-- Header Section -->
     <div class="header-section">
-        <img class="game-logo" src="img/qp64e8zf.png" alt="Image Logo" />
-        <h1 class="game-title">Red Dead Redemption</h1>
+        <img class="game-logo" src="img/qp64e8zf.png " alt="Image Logo " />
+        <h1 class="game-title">Red Dead Redemption Characters</h1>
         <ul class="store-list">
             <li class="store-item">Home</li>
             <li class="store-item">Shop</li>
             <li class="store-item">Blog</li>
             <li class="store-item">Support</li>
         </ul>
+    </div>
+
+    <!-- Character Section -->
+    <div class="character-section">
+        <h2>Major Characters</h2>
+
+        <!-- Character 1: John Marston -->
+        <div class="character">
+            <img src="img/john-marston.jpg" alt="John Marston " class="character-image" />
+            <div class="character-info">
+                <h3>John Marston</h3>
+                <p>
+                    John Marston is the main protagonist in *Red Dead Redemption*. A former outlaw, he seeks redemption for his past crimes and tries to reunite with his family. He is a skilled gunman and has a strong moral compass.
+                </p>
+                <ul>
+                    <li><strong>Role:</strong> Protagonist</li>
+                    <li>
+                        <strong>Background:</strong> Former outlaw turned family man.
+                    </li>
+                    <li><strong>Skills:</strong> Gunslinger, hunter, horse rider.</li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- Character 2: Arthur Morgan -->
+        <div class="character">
+            <img src="img/Arthur-Morganv1.jpg" alt="Arthur Morgan " class="character-image" />
+            <div class="character-info">
+                <h3>Arthur Morgan</h3>
+                <p>
+                    Arthur Morgan is the main protagonist of *Red Dead Redemption 2*. A loyal member of the Van der Linde gang, Arthur is a complex character struggling with his morality, past, and relationships within the gang.
+                </p>
+                <ul>
+                    <li><strong>Role:</strong> Protagonist (Red Dead Redemption 2)</li>
+                    <li><strong>Background:</strong> Outlaw, former gang member.</li>
+                    <li>
+                        <strong>Skills:</strong> Gunslinger, tracker, animal handler.
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- Character 3: Dutch Van der Linde -->
+        <div class="character">
+            <img src="img/Dutch Van der Linde.jpg " alt="Dutch Van der Linde " class="character-image" />
+            <div class="character-info">
+                <h3>Dutch Van der Linde</h3>
+                <p>
+                    Dutch Van der Linde is the charismatic leader of the Van der Linde gang. Once a father figure to Arthur and John, his increasing instability and ideological beliefs create conflict within the gang.
+                </p>
+                <ul>
+                    <li><strong>Role:</strong> Antagonist, Gang Leader</li>
+                    <li>
+                        <strong>Background:</strong> Leader of the Van der Linde gang.
+                    </li>
+                    <li><strong>Skills:</strong> Strategist, persuasive speaker.</li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- Character 4: Sadie Adler -->
+        <div class="character">
+            <img src="img/Sadie Adler.jpg " alt="Sadie Adler " class="character-image" />
+            <div class="character-info">
+                <h3>Sadie Adler</h3>
+                <p>
+                    Sadie Adler is a strong, independent woman who becomes a vital member of the Van der Linde gang. Initially mourning the death of her husband, Sadie becomes a ruthless and skilled fighter.
+                </p>
+                <ul>
+                    <li><strong>Role:</strong> Gang Member</li>
+                    <li>
+                        <strong>Background:</strong> Widow, former housewife turned outlaw.
+                    </li>
+                    <li><strong>Skills:</strong> Gunslinger, sharpshooter, fighter.</li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- Add more characters as needed -->
     </div>
 </body>
 
